deployments/gifts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gifts-service
  namespace: gifts
spec:
  type: ClusterIP
  selector:
    app: gifts
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
